--- a/.github/workflows/test-ping.yml
+++ b/.github/workflows/test-ping.yml
@@ -7,13 +7,10 @@ jobs:
   ping:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./scripts
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Check out the repository to the runner
         uses: actions/checkout@v4
       - name: Run a script
-        run: ./test/ping-test.sh
+        run: ./test/test-ping.sh
