--- a/.github/workflows/test-ping.yml
+++ b/.github/workflows/test-ping.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   ping:
     # The type of runner that the job will run on
-    runs-on: [self-hosted, ubuntu-latest]
+    runs-on: [self-hosted, Linux]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
